--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -18,6 +18,7 @@
 		<kotlin.version>1.5.20</kotlin.version>
 		<spring.version>2.5.2</spring.version>
 		<jooq.version>3.15.1</jooq.version>
+		<kotlinx.coroutines>1.5.1</kotlinx.coroutines>
 
 		<!--Properties for JOOQ Codegen plugin-->
 		<db.driver>org.postgresql.Driver</db.driver>
@@ -35,6 +36,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -56,12 +61,17 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-core</artifactId>
-			<version>1.5.1</version>
+			<version>${kotlinx.coroutines}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-jdk8</artifactId>
-			<version>1.5.1</version>
+			<version>${kotlinx.coroutines}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-reactor</artifactId>
+			<version>${kotlinx.coroutines}</version>
 		</dependency>
 
 		<dependency>
