--- a/afterlife-front-end/package.json
+++ b/afterlife-front-end/package.json
@@ -11,10 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
-    "@angular/cdk": "^12.1.3",
+    "@angular/cdk": "^12.2.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.2",
     "@angular/localize": "~12.1.2",
     "@angular/material": "^12.1.3",
@@ -24,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angular-gauge": "^4.0.0",
     "bootstrap": "^4.5.0",
+    "highcharts": "^9.1.2",
+    "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
