--- a/afterlife-front-end/package.json
+++ b/afterlife-front-end/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-file-uploader": "^7.0.3",
     "angular-gauge": "^4.0.0",
     "bootstrap": "^4.5.0",
     "highcharts": "^9.1.2",
