--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -121,6 +121,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>ru.ifmo.software_engineering.afterlife.AfterlifeApplicationKt</mainClass>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
@@ -132,6 +135,10 @@
 					<compilerPlugins>
 						<plugin>spring</plugin>
 					</compilerPlugins>
+					<sourceDirs>
+						<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+						<sourceDir>${project.basedir}/target/generated-sources/jooq</sourceDir>
+					</sourceDirs>
 				</configuration>
 				<dependencies>
 					<dependency>
