--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+springdoc.swagger-ui.disable-swagger-default-url=true
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/afterlife_db?ssl=require
 spring.datasource.username=afterlife_user
 spring.datasource.password=afterlife_password
