--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<kotlin.version>1.5.20</kotlin.version>
+		<arrow.version>0.13.2</arrow.version>
 		<spring.version>2.5.2</spring.version>
 		<jooq.version>3.15.1</jooq.version>
 		<kotlinx.coroutines>1.5.1</kotlinx.coroutines>
@@ -116,6 +117,18 @@
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq-codegen</artifactId>
 			<version>${jooq.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.arrow-kt</groupId>
+			<artifactId>arrow-core</artifactId>
+			<version>${arrow.version}</version>
 		</dependency>
 	</dependencies>
 
