Write unit tests for Csv Readers, fixed SinCsvRowParserProvider, changed Date to ZonedDateTime

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -97,6 +97,12 @@
 			<version>${kotlin.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.nhaarman</groupId>
+			<artifactId>mockito-kotlin</artifactId>
+			<version>0.9.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
