--- a/afterlife-front-end/package.json
+++ b/afterlife-front-end/package.json
@@ -26,6 +26,7 @@
     "angular-file-uploader": "^7.0.3",
     "angular-gauge": "^4.0.0",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "highcharts": "^9.1.2",
     "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "~12.1.2",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
