--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/afterlife_db?ssl=require
 spring.datasource.username=afterlife_user
 spring.datasource.password=afterlife_password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
