--- a/afterlife-front-end/package.json
+++ b/afterlife-front-end/package.json
@@ -27,6 +27,7 @@
     "angular-gauge": "^4.0.0",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.5",
+    "forms-angular": "^0.12.0-beta.165",
     "highcharts": "^9.1.2",
     "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
