--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -111,9 +111,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.nhaarman</groupId>
+			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
-			<version>1.6.0</version>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>2.8.47</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
